# drift-car-sim

./: .gitignore  README.md  vehicle_parameters.md
src/drift_car_bringup/: CMakeLists.txt  package.xml
src/drift_car_bringup/config/: bridge_config.yaml
src/drift_car_bringup/launch/: simulation.launch.py
src/drift_car_bringup/models/drift_car/: drift_car.sdf
src/drift_car_bringup/src/: drift_teleop.py
src/drift_car_bringup/worlds/: drift_track.sdf  empty_world.sdf
src/drift_car_sim/: teleop.py
src/drift_car_sim/models/drift_car/: drift_car.sdf  model.config
src/drift_car_sim/worlds/: basic_world.sdf
src/drift_msgs/: CMakeLists.txt  package.xml
src/drift_msgs/msg/: DriftState.msg  ImuProcessed.msg  WheelSpeeds.msg
src/drift_state_estimation/: CMakeLists.txt  package.xml
src/drift_state_estimation/config/: estimation_params.yaml
src/drift_state_estimation/drift_state_estimation/: imu_processor.py  slip_estimator.py  wheel_odometry.py
src/drift_state_estimation/drift_state_estimation/utils/: __init__.py  filters.py  transforms.py
src/drift_state_estimation/launch/: state_estimation.launch.py
